# ferroscope

./: README.md
API-DOCS/: README.md  authentication.md  entry.md  streaming.md  user_view.md
UI/: .dockerignore  docker-compose.yml
UI/src/app/: layout.tsx  page.tsx
UI/src/app/nodes/[id]/: page.tsx
UI/src/components/dashboard/: CPUChart.tsx  CreateRuleModal.tsx  NodeCard.tsx  NodeGrid.tsx  RAMChart.tsx  ServiceStatusTabs.tsx  StatsDisplay.tsx
UI/src/lib/: api.ts
UI/src/types/: index.ts
agent/: .gitignore  Cargo.toml  features.txt
agent/src/: jobs.rs  main.rs  set_up.rs  system.rs
agent/src/file_integrity/: logic.rs
agent/src/jobs/: config_parse.rs  config_reader.rs  executor.rs  host.rs  structures.rs  web.rs
agent/src/system/: logic.rs  structures.rs
scripts/: install.sh
server/: .dockerignore  .gitignore  API.MD  Cargo.toml  Dockerfile  dev-compose.yml  docker-compose.yml
server/migrations/: 0001_migrations.sql  0002_migrations.sql  0003_migrations.sql
server/src/: agent_views.rs  bg_services.rs  lib.rs  main.rs  models.rs  objects.rs  process.rs  user_views.rs
server/src/agent_views/: auth.rs  middleware.rs  objects.rs  urls.rs  views.rs
server/src/bg_services/: notification_medium.rs  notification_service.rs  status_check.rs  structures.rs
server/src/global/: mod.rs  structure.rs  utils_functions.rs
server/src/user_views/: auth.rs  middleware.rs  payloads.rs  read.rs  response.rs  streaming.rs  urls.rs  views.rs  write.rs
