[package]
name = "ferroscope-agent"
version = "0.1.0"
edition = "2024"

[profile.release]
lto="fat"
codegen-units=1
panic="abort"
strip=true


[dependencies]
procfs = "0.18.0"
anyhow = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false,features = ["json", "rustls-tls-webpki-roots"] }
serde_json = "1.0.149"
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.38.2"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"]}
tokio-rustls ={ version= "0.26.4" , default-features = false, features = ["ring"] }
x509-parser = "0.18.1"
time = { version = "0.3", features = ["serde"] }
rustls-native-certs = "0.7"